<resources>
    <string name="app_name">Banii Mei</string>
    <string name="start_game">Start Game</string>
    <string name="owner">©Aplicație creată de Nicolae Florentina-Alexandra, ASE 2021</string>
    <string name="setari_titlu">Setari</string>
    <string name="setari_sunet">Sunet</string>
    <string name="setari_muzica">Muzica</string>
    <string name="setari_notificari">Notificari</string>
    <string name="setari_despre">Despre Aplicatie</string>
    <string name="exit_game">Exit</string>
    <string name="setari_descarca">Descarca materiale</string>
    <string name="iw_description">Logo Banii mei</string>
    <string name="exit_message">Doriți să părăsiți aplicația?</string>
    <string name="exit_da">DA</string>
    <string name="despre_titlu">Despre Aplicatie</string>
    <string name="despre_text">Aceasta este Aplicatia Banii Mei - joc de educatie financiara,
        realizat de NICOLAE Florentina-Alexandra, in cadrul proiectului de licenta la facultatea CSIE,
        specializarea Informatica Economica, in cadrul ASE, an scolar 2020-2021,
        profesor indrumator prof. univ. dr. DARDALA Marian.
        \n\nMelodie fundal:
        \nGive Me A Smile by Free Music | https://soundcloud.com/fm_freemusic
        \nMusic promoted by https://www.chosic.com/
        \nCreative Commons Attribution 3.0 Unported License
        \nhttps://creativecommons.org/licenses/by/3.0/deed.en_US</string>
    <string name="despre_rate">Oferiti un calificativ:</string>
    <string name="x_buton">X</string>
    <string name="contdesc_moneda">Moneda</string>
    <string name="default_money">15</string>
    <string name="default_lvlname">LvL</string>
    <string name="btn_maideparte">Mai departe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exemplu1">Exemplu1:</string>
    <string name="default_info">Informatii</string>
    <string name="default_titlu">Titlu</string>
    <string name="exemplu2">Exemplu2:</string>
    <string name="setari_evalueaza">Evalueaza Aplicatia</string>
    <string name="setari_trmeval">Trimite evaluare</string>
    <string name="setari_lasamsj">Lasati-ne un mesaj!</string>
    <string name="inapoi">Inapoi</string>
    <string name="msg_nivelinactiv">Nivel inactiv. Completati nivelul anterior pentru a debloca acest nivel!</string>
    <string name="exit_nu">NU</string>
    <string name="alert_ok">OK</string>
    <string name="felicitari_titlu">Felicitari</string>
    <string name="felicitari_maideparte">Mergi mai departe</string>
    <string name="intrfr_intrebaredefault">Intrebare</string>
    <string name="intrfr_raspunscorectdef">Raspuns corect</string>
    <string name="msj_nivelincheiat">Nivelul s-a incheiat</string>
    <string name="msj_raspmaiincearca">Raspunsul nu este corect! Mai incearca!</string>
    <string name="hint_hint">Ofera indiciu (-5 banuti)</string>
    <string name="nu">NU</string>
    <string name="da">DA</string>
    <string name="dialog_hint">Un indiciu costa 5 banuti. Doriti sa-l cumparati?</string>
    <string name="hint_title">Indiciu</string>
    <string name="joc_incheiat">Felicitari! Esti un geniu in domeniul financiar si ai incheiat toate capitolele! In continuare, poti relua informatiile, poti descarca foi de lucru sau poti astepta noi implementari (nu uita sa actualizezi aplicatia)</string>
    <string name="titlu_joc_incheiat">Joc incheiat!</string>
    <string name="ok_finish">OK</string>
    <string name="shprefs_sunet_key">Sunet</string>
    <string name="shprefs_muzica_key">Muzica</string>
    <string name="shprefs_notificari_key">Notificari</string>
    <string name="shprefs_numefisier">PreferinteSetari</string>
    <string name="shprefs_scor_numefis">PreferinteScor</string>
    <string name="shprefs_scor">Scor</string>
    <string name="prefid_capitole_active">Capitole active</string>
</resources>