<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundal"
    tools:context=".activitati.SetariActivity">

    <TextView
        android:id="@+id/titluSetari"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@color/portocaliu"
        android:fontFamily="casual"
        android:padding="16dp"
        android:text="@string/setari_titlu"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titluSetari">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/setareSunet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="casual"
            android:text="@string/setari_sunet"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:checked="true"
            />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/setareMuzica"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="casual"
            android:text="@string/setari_muzica"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:checked="true"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/setareNotificari"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="casual"
            android:text="@string/setari_notificari"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:checked="true"/>

        <TextView
            android:id="@+id/setareDespre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="casual"
            android:text="@string/setari_despre"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true" />

        <TextView
            android:id="@+id/setareEvalueaza"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="casual"
            android:text="@string/setari_evalueaza"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/setareDescarca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="casual"
            android:text="@string/setari_descarca"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>